--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "kombinatoricsjs",
-    "version": "0.1.2",
+    "version": "1.0.1",
     "description": "combinatorics routines",
     "keywords": [
         "combinatorics"
@@ -15,7 +15,7 @@
     "author": "michele <mikbin80@gmail.com>",
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "git+https://github.com/MikBin/kombinatoricsJs.git"
     },
     "license": "MIT",
     "engines": {
@@ -52,30 +52,6 @@
             "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
         }
     },
-    "jest": {
-        "transform": {
-            ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-        },
-        "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js"
-        ],
-        "coveragePathIgnorePatterns": [
-            "/node_modules/",
-            "/test/"
-        ],
-        "coverageThreshold": {
-            "global": {
-                "branches": 90,
-                "functions": 95,
-                "lines": 95,
-                "statements": 95
-            }
-        },
-        "collectCoverage": true
-    },
     "prettier": {
         "semi": false,
         "singleQuote": true
@@ -92,9 +68,9 @@
         "cz-conventional-changelog": "^2.0.0",
         "husky": "^0.14.0",
         "jest": "^22.0.2",
-        "lint-staged": "^7.1.3",
+        "lint-staged": "^7.2.2",
         "lodash.camelcase": "^4.3.0",
-        "prettier": "^1.13.4",
+        "prettier": "^1.14.2",
         "prompt": "^1.0.0",
         "replace-in-file": "^3.0.0-beta.2",
         "rimraf": "^2.6.1",
