--- a/package.json
+++ b/package.json
@@ -58,36 +58,36 @@
     },
     "devDependencies": {
         "@types/jest": "^22.0.0",
-        "@types/node": "^10.0.3",
+        "@types/node": "^10.12.30",
         "ava": "^0.25.0",
-        "ava-ts": "^0.25.1",
-        "colors": "^1.1.2",
+        "ava-ts": "^0.25.2",
+        "colors": "^1.3.3",
         "commitizen": "^2.9.6",
-        "coveralls": "^3.0.0",
+        "coveralls": "^3.0.3",
         "cross-env": "^5.0.1",
         "cz-conventional-changelog": "^2.0.0",
         "husky": "^0.14.0",
         "jest": "^22.0.2",
-        "lint-staged": "^7.2.2",
+        "lint-staged": "^7.3.0",
         "lodash.camelcase": "^4.3.0",
-        "prettier": "^1.14.2",
+        "prettier": "^1.16.4",
         "prompt": "^1.0.0",
-        "replace-in-file": "^3.0.0-beta.2",
-        "rimraf": "^2.6.1",
+        "replace-in-file": "^3.4.4",
+        "rimraf": "^2.6.3",
         "rollup": "^0.59.2",
-        "rollup-plugin-commonjs": "^9.0.0",
-        "rollup-plugin-json": "^3.0.0",
-        "rollup-plugin-node-resolve": "^3.0.0",
+        "rollup-plugin-commonjs": "^9.2.1",
+        "rollup-plugin-json": "^3.1.0",
+        "rollup-plugin-node-resolve": "^3.4.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-typescript2": "^0.11.1",
-        "semantic-release": "^15.0.0",
+        "semantic-release": "^15.13.4",
         "ts-jest": "^22.0.0",
-        "ts-node": "^7.0.1",
-        "tslint": "^5.8.0",
-        "tslint-config-prettier": "^1.1.0",
+        "ts-node": "^8.0.3",
+        "tslint": "^5.13.1",
+        "tslint-config-prettier": "^1.18.0",
         "tslint-config-standard": "^7.0.0",
-        "typedoc": "^0.12.0",
-        "typescript": "^2.9.2",
+        "typedoc": "^0.14.2",
+        "typescript": "^3.3.3333",
         "validate-commit-msg": "^2.12.2"
     }
 }
